--- a/WebContent/matrix.html
+++ b/WebContent/matrix.html
@@ -70,27 +70,28 @@ body {
 							<li class="nav-item active"><a class="nav-link"
 								href="matrix.html">Pagina inicial <span class="sr-only">(current)</span></a>
 							</li>
-							<li class="nav-item"><a class="nav-link"
-								href="criarConta.jsp">Criar conta</a></li>
-
-
-	                            <li class="nav-item"><a class="nav-link disabled"
-								href="cadastrarDependentes.jsp">Cadastrar Dependentes</a></li>
+							<li class="nav-item"><a class="nav-link" href="cadastro.jsp">Cadastro</a></li>
 
 
 							<li class="nav-item"><a class="nav-link disabled"
-								href="cadastrarFuncionario.jsp">Cadastrar Funcionario</a></li>
+								href="cadastrarDependentes.jsp"></a></li>
 
 
+							<li class="nav-item"><a class="nav-link disabled"
+								href="funcionario.jsp">Funcionario</a></li>
+
+							<li class="nav-item"><a class="nav-link disabled"
+								href="cliente.jsp">Cliente</a></li>
 							<li class="nav-item dropdown"><a
 								class="nav-link dropdown-toggle" href="" id="navbarDropdown"
 								role="button" data-toggle="dropdown" aria-haspopup="true"
 								aria-expanded="false"> outras opçoes </a>
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-									<a class="dropdown-item" href="midia.jsp">Midia</a> <a
+									<a class="dropdown-item" href="midia.jsp">midia</a> <a
 										class="dropdown-item" href="fornecedor.jsp">Fornecedores</a>
 									<div class="dropdown-divider"></div>
-									<a class="dropdown-item" href="relatorio.jsp">relatorio</a>
+									<a class="dropdown-item" href="relatorio.jsp">relatorio</a> <a
+										class="dropdown-item" href="devolucao.jsp">Devuluçao</a>
 								</div></li>
 
 						</ul>
